toque un poco el codigo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </header>
     <main>
         <section>
-            <p></p>
+            <p>anashe</p>
             <h1>Asegura <span>tranquilo</span> todo eso que queres, con seguros <span>web</span></h1>
             <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
             <button></button>
