--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <p>anashe</p>
             <h1>Asegura <span>tranquilo</span> todo eso que queres, con seguros <span>web</span></h1>
-            <img src="max.jpg" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+            <img src="max.jpg" alt="">
             <button></button>
             <button></button>
             <h2></h2>
