saque mas boludeces todavia

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <p>anashe</p>
             <h1>Asegura <span>tranquilo</span> todo eso que queres, con seguros <span>web</span></h1>
-            <img src="max.jpg" alt="">
+            <img src="max.jpg" alt="" width="300">
             <button></button>
             <button></button>
             <h2></h2>
@@ -21,14 +21,6 @@
             <h4></h4>
             <p></p>
         </section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
         <section></section>
         <section></section>
         <section></section>
